# custom-keyboard

./: .gitignore  arrayReverser.c
c/vamk/: CMakeLists.txt  ssd1306_buffer_helper.c  ssd1306_buffer_helper.h  ssd1306_config.h  ssd1306_i2c_api.c  ssd1306_i2c_api.h  vamk.c  vamk_config.h  vamk_constants.h  vamk_display_config.h  vamk_i2c_switch_state_transmitter.c  vamk_i2c_switch_state_transmitter.h  vamk_key_helper.c  vamk_key_helper.h  vamk_key_state.c  vamk_key_state.h  vamk_keyboard_state.c  vamk_keyboard_state.h  vamk_keymap_config.h  vamk_layer_info.c  vamk_layer_info.h  vamk_peripheral_switch_state.c  vamk_peripheral_switch_state.h  vamk_press_handler.c  vamk_press_handler.h  vamk_release_handler.c  vamk_release_handler.h  vamk_switch_state.c  vamk_switch_state.h  vamk_tap_handler.c  vamk_tap_handler.h  vamk_types.h
c/vamk/display/: ssd1306_buffer_helper.c  ssd1306_buffer_helper.h  ssd1306_config.h  ssd1306_i2c_api.c  ssd1306_i2c_api.h  vamk_display_state.c  vamk_display_state.h
c/vamk/key-handling/: mcp23017_config.h  mcp23017_i2c_api.c  mcp23017_i2c_api.h  vamk_hold_delay_handler.c  vamk_hold_delay_handler.h  vamk_key_helper.c  vamk_key_helper.h  vamk_key_logic.c  vamk_key_logic.h  vamk_key_state.c  vamk_key_state.h  vamk_key_timer.c  vamk_key_timer.h  vamk_keyboard_state.c  vamk_keyboard_state.h  vamk_peripheral_switch_state.c  vamk_peripheral_switch_state.h  vamk_press_handler.c  vamk_press_handler.h  vamk_press_helper.c  vamk_press_helper.h  vamk_release_handler.c  vamk_release_handler.h  vamk_release_helper.c  vamk_release_helper.h  vamk_switch_logic.c  vamk_switch_logic.h  vamk_switch_state.c  vamk_switch_state.h  vamk_tap_handler.c  vamk_tap_handler.h
c/vamk/keymaps/: handwire_dactyl_lpk20_rev0_keymap.h  mskp_lpk20_rev0_keymap.h  mskp_qlp_rev0_keymap.h  qlp_22_rev0_keymap.h  qlp_22_rev1_keymap.h  seok_38_rev0_keymap_m.h  vamk_keymap_config.h  vamk_keymap_constants.h  vok_sl_rev0_keymap.h
c/vamk/macros/: win_macros.h
c/vamk/mouse-handling/: pmw3360_config.h  pmw3360_spi_api.c  pmw3360_spi_api.h
c/vamk/tinyusb-config/: tusb_implementation.c  tusb_implementation.h
ino/arduinoKeyboardLeft/: arduinoKeyboardLeft.ino
ino/arduinoKeyboardPrototypeCode/: arduinoKeyboardPrototypeCode.ino
ino/arduinoKeyboardRight/: arduinoKeyboardRight.ino
ino/mk1/arduinoKeyboardLeft/: arduinoKeyboardLeft.ino
ino/mk2/keyboardMk2/: keyboardMk2.ino
ino/mk2/keyboardmk2/: keyboardMk2.ino
ino/mk3/keyboardMk3/: keyboardMk3.ino
resources/stl/: cap-shank.stl  keyboardMk2.stl
scad/: backplateLeft.scad  customKeyboardMk2.scad  kailhKeycapMk1.scad  kailhKeycapMk2.scad  keyboardMk1.scad  keyboardMk2.scad  keyboardMk3.scad  keyboardMk4.scad  keyboardMk5.scad  keyboardMk6.scad  keyboardTentingStructureMk2.scad  keybordLeft.scad  keybordParts.scad  lpk_dactyl_mk1.scad  mounting-puck.scad  trackballMacropadMk1.scad
scad/cases/: datahand-palm-rest.stl  mskp-qlp-rev0-test-case.scad  qlp-22_rev1_jank_case.scad  seok-38_rev0_jank_case.scad
scad/lpk_dactyl/: croissant-left.3mf  croissant-left.stl  croissant-right.3mf  croissant-right.stl  key_cover.scad  lpk_dactyl_mk1.scad  lpk_dactyl_mk2.scad  usbc_mount.scad
(+69 files in other folders)
